--- a/02-docker-build-push-to-acr-deploy-to-aks-pipeline.yml
+++ b/02-docker-build-push-to-acr-deploy-to-aks-pipeline.yml
@@ -2,6 +2,10 @@
 # Build and push image to Azure Container Registry; Deploy to Azure Kubernetes Service
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
+# Deploy to Azure Kubernetes Service
+# Build and push image to Azure Container Registry; Deploy to Azure Kubernetes Service
+# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+
 trigger:
 - main
 
