--- a/03. custom01-pipeline-buildandpush-to-acr-and-publish-artifacts.yml
+++ b/03. custom01-pipeline-buildandpush-to-acr-and-publish-artifacts.yml
@@ -49,6 +49,9 @@ stages:
         Contents: '**'
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
         OverWrite: true
+    # List files from Build Artifact Staging Directory - After Copy
+    - bash: echo After copying to Build Artifact Directory ; ls -R $(Build.ArtifactStaginggDirectory)
+       
     
     #Task3: Publsih buidl artifacts ( Publish build to Azure Pipelines)
     - task: PublishBuildArtifacts@1
