--- a/04-Custom2-pipeline-build-from-scratch.yaml
+++ b/04-Custom2-pipeline-build-from-scratch.yaml
@@ -12,7 +12,7 @@ trigger:
 - main
 # Varibales
 variables:
-  tag: '$(Build.BuildId)'
+  tag: '$(Build.BuildId)-$(Build.SourceVersion:0:7)'
 
 stages:
 # Build stage
@@ -24,6 +24,9 @@ stages:
     pool:
       vmImage: 'ubuntu-latest'
     steps:
+    # Debug Script - Print Variables
+    - script: echo " Docker Tag will be:$(tag)"
+      displayName: 'Print Docker Tag'
     # Task1: Build Docker Image and push to ACR
     - task: Docker@2
       inputs:
@@ -49,8 +52,6 @@ stages:
         OverWrite: true
     # List files from Build Artifact Staging Directory - After Copy
     - bash: echo After copying to Build Artifact Directory ; ls -R $(Build.ArtifactStaginggDirectory)
-       
-    
     #Task3: Publsih buidl artifacts ( Publish build to Azure Pipelines)
     - task: PublishBuildArtifacts@1
       inputs:
