--- a/04-Custom2-pipeline-build-from-scratch.yaml
+++ b/04-Custom2-pipeline-build-from-scratch.yaml
@@ -35,7 +35,7 @@ stages:
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
         tags:
-          $(tag)
+          #$(tag)
           $(Build.SourceVersion)
     
    ## Publish Artifacts pipeline code in addition to Build and Push
